# NatsGateWay-dev

./: .gitignore  .gitmodules  CMakeLists.txt  NatsGateWay.conf  NatsGateWay.service  README.md  buildScriptLinux  buildScriptLinux.sh  main.cpp
configs/: NatsAccessPoint.ini  NatsGateWay.ini  NatsServices.json  Settings-SHTSI5.ini
src/: apihandler.cpp  apihandler.h  natsservice.cpp  natsservice.h
src/api/: natshandler.cpp  natshandler.h  tcpclient.cpp  tcpclient.h
src/singletones/: settings.cpp  settings.h
